--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,11 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <p><a href="/makeRequests"> Make Requests </a></p>
+    <!--<p><a href="/makeRequests"> Make Requests </a></p>-->
+
+    <p><a href="/collections"> Collections </a></p>
+    <p><a href="/controlFollows"> Follow Controls </a></p>
+    <p><a href="/loops"> Loops </a></p>
+
   </body>
 </html>
