ADD router, handler, controlFlows

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <!--<p><a href="/makeRequests"> Make Requests </a></p>-->
 
     <p><a href="/collections"> Collections </a></p>
-    <p><a href="/controlFollows"> Follow Controls </a></p>
+    <p><a href="/controlFlows"> Follow Controls </a></p>
     <p><a href="/loops"> Loops </a></p>
 
   </body>
